@@ -1,3 +1,2 @@
 DECL|macro|QABSTRACTEVENTDISPATCHER_H
 DECL|variable|QSocketNotifier
-DECL|variable|T1
