@@ -4,4 +4,5 @@ DECL|member|id
 DECL|member|interval
 DECL|member|obj
 DECL|member|timeout
+DECL|member|timerType
 DECL|struct|QTimerInfo
